# gauss

./: .gitignore  Cargo.toml  README.md  cachegrind.out.2331429  cachegrind.out.2343563  cachegrind.out.2354510  crates.js  diff.txt  help.html  index.html  search-index.js  settings.html  sources.txt  src-files.js
.github/workflows/: rust-ci.yml  rust-doc.yml
gauss-lib/: Cargo.toml
gauss-lib/src/: exp.rs  lib.rs
gauss-procs/: Cargo.toml
gauss-procs/src/: main.rs
gauss_lib/: all.html  enum.ProcessError.html  index.html  sidebar-items.js  struct.GaussProcs.html  trait.Kernel.html
gauss_procs/: all.html  fn.lim_nonpoly.html  fn.main.html  fn.reconstruct_matrix.html  index.html  sidebar-items.js  struct.TwoDpoint.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/gauss_lib/: trait.Kernel.js
rosenbrock/: Cargo.toml  all.html  fn.expected_improvement.html  fn.main.html  fn.norm.html  fn.rosenbrock.html  index.html  sidebar-items.js  struct.TwoDpoint.html
rosenbrock/src/: main.rs
schwefel/: Cargo.toml  all.html  fn.expected_improvement.html  fn.main.html  fn.norm.html  fn.schwefel.html  index.html  sidebar-items.js  static.GLOBAL.html  struct.TwoDpoint.html
schwefel/src/: main.rs
src/gauss_lib/: lib.rs.html
src/gauss_procs/: main.rs.html
src/rosenbrock/: main.rs.html
src/schwefel/: main.rs.html
