[workspace]
resolver = "2"

members = [
	"gauss-procs",
	"gauss-lib",
]

[workspace.dependencies]
rayon         = "1.7.0"
plotly        = "0.8.3"
rand          = { version = "0.8.5", features = ["small_rng"] }
faer = {version = "0.11", features = ["ndarray", "nalgebra"]}
dyn-stack     = "0.9.0"
csv = "1.2.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.107"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
gauss-lib = { version = "0.1.0", path = "./gauss-lib" }

[profile.release]
debug = true
lto = true
codegen-units = 1
