[workspace]
resolver = "2"

members = [
	"gauss-procs",
	"gauss-lib",
]

[workspace.dependencies]
gauss-lib = { version = "0.1.0", path = "./gauss-lib" }

argmin = "0.8.1"
csv = "1.2.2"
faer = {version = "0.11", features = ["ndarray", "nalgebra"]}
itertools = "0.11.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
ordered-float = "4.1.0"
plotly = "0.8.3"
rayon  = "1.7.0"
rand  = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.107"


[profile.release]
debug = true
lto = true
codegen-units = 1
