[package]
name = "gauss-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
faer = { workspace = true }
nalgebra = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
[dev-dependencies]
assert_approx_eq = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../katex-header.html"]