[package]
name = "gauss-procs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
faer = { workspace = true }
gauss-lib = { workspace = true }
itertools = "0.11.0"
